--- a/docs/pages/components/checkbox.mdx
+++ b/docs/pages/components/checkbox.mdx
@@ -125,16 +125,16 @@ Add hint text explaining this, for example, "Select all that apply.".
 	<CH.Code>
 		```js React
 		<FormGroup legend="How would you like us to contact you?">
-			<Checkbox name="contact-none-example" value="email" label="Email" />
+			<Checkbox name="contact-grouped-none" value="email" label="Email" />
 			<Checkbox
-				name="contact-none-example"
+				name="contact-grouped-none"
 				value="telephone"
 				label="Telephone"
 			/>
-			<Checkbox name="contact-none-example" value="sms" label="Text message" />
+			<Checkbox name="contact-grouped-none" value="sms" label="Text message" />
 			<Checkbox
+				name="contact-grouped-none"
 				value="none"
-				name="contact-none-example"
 				label="I do not wish to be contacted"
 			/>
 		</FormGroup>
@@ -144,26 +144,26 @@ Add hint text explaining this, for example, "Select all that apply.".
 			<legend class="form-group__legend">How would you like us to contact you?</legend>
 			<div class="checkbox" data-component="checkbox">
 				<div>
-					<input type="checkbox" class="checkbox__input" id="contact-none-example_email" name="contact-none-example" value="email">
-					<label class="checkbox__label" for="contact-none-example_email">Email</label>
+					<input type="checkbox" class="checkbox__input" id="contact-grouped-none_email" name="contact-grouped-none" value="email">
+					<label class="checkbox__label" for="contact-grouped-none_email">Email</label>
 				</div>
 			</div>
 			<div class="checkbox" data-component="checkbox">
 				<div>
-					<input type="checkbox" class="checkbox__input" id="contact-none-example_telephone" name="contact-none-example" value="telephone">
-					<label class="checkbox__label" for="contact-none-example_telephone">Telephone</label>
+					<input type="checkbox" class="checkbox__input" id="contact-grouped-none_telephone" name="contact-grouped-none" value="telephone">
+					<label class="checkbox__label" for="contact-grouped-none_telephone">Telephone</label>
 				</div>
 			</div>
 			<div class="checkbox" data-component="checkbox">
 				<div>
-					<input type="checkbox" class="checkbox__input" id="contact-none-example_sms" name="contact-none-example" value="sms">
-					<label class="checkbox__label" for="contact-none-example_sms">Text message</label>
+					<input type="checkbox" class="checkbox__input" id="contact-grouped-none_sms" name="contact-grouped-none" value="sms">
+					<label class="checkbox__label" for="contact-grouped-none_sms">Text message</label>
 				</div>
 			</div>
 			<div class="checkbox" data-component="checkbox">
 				<div>
-					<input type="checkbox" class="checkbox__input" id="contact-none-example_none" name="contact-none-example" value="none">
-					<label class="checkbox__label" for="contact-none-example_none">I do not wish to be contacted</label>
+					<input type="checkbox" class="checkbox__input" id="contact-grouped-none_none" name="contact-grouped-none" value="none">
+					<label class="checkbox__label" for="contact-grouped-none_none">I do not wish to be contacted</label>
 				</div>
 			</div>
 		</fieldset>
@@ -196,9 +196,9 @@ Inline checkboxes don't support hint text for individual checkboxes. You can sti
 	<CH.Code>
 		```js React
 		<FormGroup inline legend="How would you like us to contact you?">
-			<Checkbox name="contact-inline" value="email" label="Email" />
-			<Checkbox name="contact-inline" value="telephone" label="Telephone" />
-			<Checkbox name="contact-inline" value="sms" label="Text message" />
+			<Checkbox name="contact-grouped-inline" value="email" label="Email" />
+			<Checkbox name="contact-grouped-inline" value="telephone" label="Telephone" />
+			<Checkbox name="contact-grouped-inline" value="sms" label="Text message" />
 		</FormGroup>
 		```
 		```html HTML
@@ -206,20 +206,20 @@ Inline checkboxes don't support hint text for individual checkboxes. You can sti
 			<legend class="form-group__legend">How would you like us to contact you?</legend>
 			<div class="checkbox checkbox--inline" data-component="checkbox">
 				<div>
-					<input type="checkbox" class="checkbox__input" id="contact-inline_email" name="contact-inline" value="email">
-					<label class="checkbox__label" for="contact-inline_email">Email</label>
+					<input type="checkbox" class="checkbox__input" id="contact-grouped-inline_email" name="contact-grouped-inline" value="email">
+					<label class="checkbox__label" for="contact-grouped-inline_email">Email</label>
 				</div>
 			</div>
 			<div class="checkbox checkbox--inline" data-component="checkbox">
 				<div>
-					<input type="checkbox" class="checkbox__input" id="contact-inline_telephone" name="contact-inline" value="telephone">
-					<label class="checkbox__label" for="contact-inline_telephone">Telephone</label>
+					<input type="checkbox" class="checkbox__input" id="contact-grouped-inline_telephone" name="contact-grouped-inline" value="telephone">
+					<label class="checkbox__label" for="contact-grouped-inline_telephone">Telephone</label>
 				</div>
 			</div>
 			<div class="checkbox checkbox--inline" data-component="checkbox">
 				<div>
-					<input type="checkbox" class="checkbox__input" id="contact-inline_sms" name="contact-inline" value="sms">
-					<label class="checkbox__label" for="contact-inline_sms">Text message</label>
+					<input type="checkbox" class="checkbox__input" id="contact-grouped-inline_sms" name="contact-grouped-inline" value="sms">
+					<label class="checkbox__label" for="contact-grouped-inline_sms">Text message</label>
 				</div>
 			</div>
 		</fieldset>
