NDS-495 update missed WCAG number, plus spacing / grammar fixes

--- a/docs/pages/components/checkbox.mdx
+++ b/docs/pages/components/checkbox.mdx
@@ -16,12 +16,12 @@ Checkboxes are a clear and simple way for users to choose answers or items from 
 ## When to use
 
 Use the checkboxes component when you need to help users:
--   select multiple options from a list
--   toggle a single option on or off
+- select multiple options from a list
+- toggle a single option on or off
 
 ## When not use
 
--   Do not use the checkboxes component if users can only choose one option from a selection. In this case, use the [radio component](/components/radio/).
+Do not use the checkboxes component if users can only choose one option from a selection. In this case, use the [radio component](/components/radio/).
 
 ## How to use
 
@@ -31,8 +31,8 @@ It's common to include "check all that apply." instructions with checkboxes to l
 
 Do not pre-select checkbox options as this makes it more likely that users will:
 
--   not realise they've missed a question
--   submit the wrong answer
+- not realise they've missed a question
+- submit the wrong answer
 
 Order checkbox options alphabetically by default. In some cases it can be useful to order them from most-to-least common so the most common options are presented first. However you should do this with caution as it can reinforce bias in your service. If in doubt, order alphabetically.
 
@@ -381,13 +381,13 @@ Do not show error messages:
 
 Component meets WCAG AA guidelines for accessibility on:
 
-Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.0 - 1.4.3).
-UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.2 - 1.4.11).
-Accessible use of color - Color is not used as the only visual means of conveying information (WCAG 2.2 - 1.4.1).
+- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.2 - 1.4.3).
+- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.2 - 1.4.11).
+- Accessible use of color - Color is not used as the only visual means of conveying information (WCAG 2.2 - 1.4.1).
 
 ## Research/evidence
 
-We tested the checkbox component on a "In consultation Comment Collection" prototype in 2021. Users understood the purpose of the checkbox and were able to use it.
+We tested the checkbox component on an "In consultation Comment Collection" prototype in 2021. Users understood the purpose of the checkbox and were able to use it.
 
 Our checkboxes are based on the [GOV.UK](http://GOV.UK) Design System. Read more about [how GOV.UK developed and tested them](https://designnotes.blog.gov.uk/2016/11/30/weve-updated-the-radios-and-checkboxes-on-gov-uk/).
 
