--- a/docs/pages/components/textarea.mdx
+++ b/docs/pages/components/textarea.mdx
@@ -1,33 +1,27 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { DefaultTextarea, HintTextarea, ErrorTextarea } from "components/examples/Textarea";
+import { DefaultTextareaExample, SingleTextarea,SingleHintTextarea, SingleErrorTextarea, GroupedTextarea, GroupedHintTextarea } from "components/examples/Textarea";
 
 export const meta = {
 	title: "Textarea",
 	description: "Use a textarea to let users enter more than one line of text",
 	npmUrl: "https://www.npmjs.com/package/@nice-digital/nds-textarea",
 	gitHubUrl: "https://github.com/nice-digital/nice-design-system/blob/main/components/nds-textarea",
-	component: DefaultTextarea
+	component: DefaultTextareaExample
 };
-
-Use a textarea to let users enter more than one line of text, providing a text area appropriate for the amount of information someone needs to enter.
 
 ## When to use
 
-Use the textarea component when you need to let users enter an amount of text longer than a single line.
+Use the textarea component when you need to let users enter an amount of text longer than a single line. 
 
 ## When not to use
 
-Do not use the textarea component if you need to let users enter shorter answers no longer than a single line, such as a phone number or name. In this case, you should use the text input component.
+Do not use the textarea component if you need to let users enter shorter answers no longer than a single line, such as a phone number or name. In this case, you should use the text input component. 
 
 ## How to use
 
-You must label textareas. Placeholder text is not a suitable substitute for a label, as it disappears when users click inside the textarea.
-
-Labels must be aligned above the textarea they refer to. They should be short, direct and written in sentence case. Do not use colons at the end of labels.
-
 <Example>
-<DefaultTextarea />
+<DefaultTextareaExample />
 
 <CH.Code>
 ```js React
@@ -41,13 +35,79 @@ Labels must be aligned above the textarea they refer to. They should be short, d
 ```
 </CH.Code>
 </Example>
+ 
+You must label textareas. Placeholder text is not a suitable substitute for a label, as it disappears when users click inside the textarea. 
+
+Labels must be aligned above the textarea they refer to. They should be short, direct and written in sentence case. Do not use colons at the end of labels. 
+
+### Use appropriately-sized textareas 
+
+Make the height of a textarea proportional to the amount of text you expect users to enter.  
+
+You can set the height of the textarea by specifying the [rows](https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/textarea#rows) attribute in HTML or the rows prop in our react component. 
+
+### Do not disable copy and paste 
+
+Users will often need to copy and paste information into a textarea, so do not stop them from doing this. 
+
+## Grouped textareas 
+
+<Example>
+<GroupedTextarea />
+
+<CH.Code>
+```js React
+<FormGroup legend="Feedback Details">
+		<Textarea
+			label="What could be improved?"
+			name="improvement_feedback"
+		></Textarea>
+		<Textarea label="Additional Comments" name="additional_comments"></Textarea>
+</FormGroup>
+```
+```html HTML
+<fieldset class="form-group" data-component="form-group">
+  <legend class="form-group__legend">Feedback Details</legend>
+
+  <div class="textarea" data-component="textarea">
+    <label class="textarea__label" for="improvement_feedback">What could be improved?</label>
+    <textarea class="textarea__textarea" id="improvement_feedback" name="improvement_feedback"></textarea>
+  </div>
+
+  <div class="textarea" data-component="textarea">
+    <label class="textarea__label" for="additional_comments">Additional Comments</label>
+    <textarea class="textarea__textarea" id="additional_comments" name="additional_comments"></textarea>
+  </div>
+</fieldset>
+
+```
+</CH.Code>
+</Example>
+
+Multiple related textarea fields should be grouped with our [Form group component](/components/form-group).  
+
+The form group: 
+
+- wraps the inputs in a `fieldset` with a `legend` that describes the group  
+- allows you to add hint text that applies to the entire group.    
 
 ## Using hint text
 
-Use hint text to give users help in context; for example, enter your full address, including postcode.
+Use hint text to give users help in context. Keep hint text short and simple.  
+
+Do not use links in hint text. While screen readers will read out the link text when describing the item, they usually do not tell users the text is a link. 
+
+Hint text can be added to both:  
+
+- An individual textarea field 
+- The overall group of textarea inputs when used together in a form group. 
+
+### Individual input hint text 
+
+Add hint text to individual text inputs to provide additional context or help. 
 
 <Example>
-<HintTextarea />
+<SingleHintTextarea />
 
 <CH.Code>
 ```js React
@@ -71,16 +131,62 @@ Use hint text to give users help in context; for example, enter your full addres
 </CH.Code>
 </Example>
 
-## Do not disable copy and paste
+### Grouped inputs hint text 
 
-Users will often need to copy and paste information into a textarea, so do not stop them from doing this.
+Add hint text to the group of textarea fields to give context or help about the overall group. 
+ 
+<Example>
+<GroupedHintTextarea />
+
+<CH.Code>
+```js React
+<FormGroup
+		legend="Feedback Details"
+		hint="Please answer all fields clearly and avoid including any personal or sensitive information."
+	>
+		<Textarea
+			label="What could be improved?"
+			name="improvement_feedback"
+		></Textarea>
+		<Textarea label="Additional Comments" name="additional_comments"></Textarea>
+</FormGroup>
+```
+```html HTML
+<fieldset class="form-group" data-component="form-group">
+  <legend class="form-group__legend">Feedback Details</legend>
+  <p class="form-group__hint">
+    Please answer all fields clearly and avoid including any personal or sensitive information.
+  </p>
+
+  <div class="textarea" data-component="textarea">
+    <label class="textarea__label" for="improvement_feedback">What could be improved?</label>
+    <textarea class="textarea__textarea" id="improvement_feedback" name="improvement_feedback"></textarea>
+  </div>
+
+  <div class="textarea" data-component="textarea">
+    <label class="textarea__label" for="additional_comments">Additional Comments</label>
+    <textarea class="textarea__textarea" id="additional_comments" name="additional_comments"></textarea>
+  </div>
+</fieldset>
+
+```
+</CH.Code>
+</Example>
+
+## Asking complex questions 
+
+If you’re asking a question that needs a detailed explanation, don’t use hint text, instead use: 
+
+- a heading that’s a statement (for example, ‘Interview needs’) rather than a question 
+- whatever mix of text, paragraphs, lists and examples best explains your question to users 
+- a label, above the form input, that asks users a specific question – for example, ‘Do you have any interview needs?’ 
 
 ## Error messages
 
 Error messages should be styled like this:
 
 <Example>
-<ErrorTextarea />
+<SingleErrorTextarea />
 
 <CH.Code>
 ```js React
@@ -107,20 +213,24 @@ Error messages should be styled like this:
 
 ## When to use an error message
 
-Show an error message using the hint text when there is a validation error.
+Only display an error when someone tries to move to the next part of the form or service. 
 
-Use standard messages for different components.
+Do not show error messages: 
+
+- when users select or tab to a field 
+- when users type into a field 
+- when they move away from a field. 
 
 ## Accessibility
 
-Component meets WCAG AA guidelines for accessibility on:
+Component meets WCAG AA guidelines for accessibility on: 
 
-- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.0 )1.4.3).
-- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.1 1.4.11).
-- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.0 1.4.1).
+- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.2 -  1.4.3). 
+- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.2 - 1.4.11). 
+- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.2 - 1.4.1). 
 
 ## Research/evidence
 
-We tested the textarea component on a "Identity and Access Management" prototype in April 2019. Users understood the purpose of the textarea and were able to use it.
+We tested the textarea component on a "Identity and Access Management" prototype in April 2019. Users understood the purpose of the textarea and were able to use it. 
 
 export default ({ children }) => <ComponentLayout meta={meta}>{children}</ComponentLayout>;
