NDS-496 Removed unused component from textarea component

--- a/docs/pages/components/textarea.mdx
+++ b/docs/pages/components/textarea.mdx
@@ -1,6 +1,6 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { DefaultTextareaExample, SingleTextarea,SingleHintTextarea, SingleErrorTextarea, GroupedTextarea, GroupedHintTextarea } from "components/examples/Textarea";
+import { DefaultTextareaExample, SingleHintTextarea, SingleErrorTextarea, GroupedTextarea, GroupedHintTextarea } from "components/examples/Textarea";
 
 export const meta = {
 	title: "Textarea",
