NDS-495 checkbox doc formatting updates

--- a/docs/pages/components/checkbox.mdx
+++ b/docs/pages/components/checkbox.mdx
@@ -17,7 +17,7 @@ Checkboxes are a clear and simple way for users to choose answers or items from 
 
 Use the checkboxes component when you need to help users:
 - select multiple options from a list
-- toggle a single option on or off
+- toggle a single option on or off.
 
 ## When not use
 
@@ -32,7 +32,7 @@ It's common to include "check all that apply." instructions with checkboxes to l
 Do not pre-select checkbox options as this makes it more likely that users will:
 
 - not realise they've missed a question
-- submit the wrong answer
+- submit the wrong answer.
 
 Order checkbox options alphabetically by default. In some cases it can be useful to order them from most-to-least common so the most common options are presented first. However you should do this with caution as it can reinforce bias in your service. If in doubt, order alphabetically.
 
@@ -318,8 +318,8 @@ Add hint text to the group of checkboxes to provide context or help for the over
 ### Asking complex questions
 
 If you're asking a question that needs a detailed explanation, don't use hint text, instead use:
-- a heading that's a statement (for example, "Interview needs") rather than a question
-- whatever mix of text, paragraphs, lists and examples best explains your question to users
+- a heading that's a statement (for example, "Interview needs") rather than a question.
+- whatever mix of text, paragraphs, lists and examples best explains your question to users.
 - a label, above the form input, that asks users a specific question - for example, "Do you have any interview needs?".
 
 
