NDS-497 update heading levels and text

--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -51,7 +51,7 @@ Align labels above the text inputs they refer to on screen. Labels should be sho
 
 If you are asking just [one question per page](https://design-system.service.gov.uk/patterns/question-pages/#start-by-asking-one-question-per-page), as we recommend, you can set the contents of the `label` as the page heading. It is good practice as it means that screen reader users will only hear the contents once.
 
-## Do not disable copy and paste
+### Do not disable copy and paste
 
 Users often need to copy and paste information into a text input, so do not stop them from doing this.
 
@@ -186,7 +186,7 @@ Add hint text to the group of text inputs to give context or help about the over
 </Example>
 
 
-## Asking complex questions
+### Asking complex questions
 
 If you're asking complex questions that needs a detailed explanation, don't use hint text, instead use:
 - A heading that's a statement (for example, "Interview needs") rather than a question.
@@ -245,7 +245,7 @@ Keeping information thats caused the errors helps users to:
 ### Errors in grouped inputs
 Text inputs in a group use the same error state - individual input questions are highlighted. For example, an address fieldset with multiple inputs with error states will look like this: */}
 
-### When not to use
+### When not to use error messages
 An error message should only display when someone tries to move to the next part of the form or service.
 
 Do not show error messages:
